# rye-github-actions-example

./: README.md  pyproject.toml
.github/workflows/: ci.yml
