[project]
name = "rye-github-actions-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryoppippi", email = "1560508+ryoppippi@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
main = "python main.py"
